- adjusted Kids difficulty (2021/04/03 MS)

1.0.6:
- fixed crash with 4k resolution (2019/12/27 MS)

1.0.5:
- added full german translation (2019/09/02 Wuzzy)
- automatic ball turbo disabled by default (2019/05/13 MS)
- fixed bug in input handling (2019/05/13 MS)
- fixed a typo (2019/05/12 Enrico Bella)

1.0.4:
- fixed crash in fps computation (2019/03/08 MS)
- added stereo sound (2019/03/07 MS)
- added shine effect (2019/03/07 MS)
- fixed computing geometry to work with non 16:9 screen ratio (2019/03/06 MS)
- fixed crash for non 16:9 resolutions (2019/03/06 MS)
- wait for p only in pause to allow switching away from window (2019/03/05 MS)
- properly mute sound on startup if disabled (2019/02/05 MS)

1.0.3:
- re-enabled Freakout superset 
- optimized menu rendering by using labels
- properly wait for release of keys and buttons
- re-enabled and improved mini games

1.0.2:
- added option to destroy single bricks as workaround for bad levels
- added option for absolute mouse input
- fixed bug in level set preview

1.0.1:
- smoother auto speed transition for balls
- sort file names directly when reading directory
- optimize code by default (--enable-debug required for debug info)
- optimized game loop delay
- added option for fps limit
- draw menu tooltip only once and with delay
- allow z or y to confirm

1.0:
- "new" level set LBreakoutHD
- level set select dialog
- resume option
- continue option
- tooltips for menu
- tons of fixes and enhancements 

0.8:
- added sounds, effects, menu
- fixed a lot of bugs

0.5:
- initial release